src/test/ui/issues/issue-101998/issue-101998.stderr
error[E0308]: mismatched types
  --> $DIR/issue-101998.rs:3:5
   |
LL | fn parse_num(num: String) -> i32 {
   |                              --- expected `i32` because of return type
LL |     result_i32_error() // specific Result error message
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `i32`, found enum `Result`
   |     help: Either change the return type or use `unwrap`: `result_i32_error().unwrap()`
   |
   = note: expected type `i32`
              found enum `Result<i32, ParseIntError>`

error[E0308]: mismatched types
  --> $DIR/issue-101998.rs:13:5
   |
LL | fn foo(num: String) -> String {
   |                        ------ expected `String` because of return type
LL |     result_i32_error() // generic error message
   |     ^^^^^^^^^^^^^^^^^^ expected struct `String`, found enum `Result`
   |
   = note: expected struct `String`
                found enum `Result<i32, ParseIntError>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
